Agrego Proyectos para organizar y Swagger

--- a/TotvsChallente/TotvsChallente.csproj
+++ b/TotvsChallente/TotvsChallente.csproj
@@ -8,6 +8,12 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TotvsChallenge.Business\TotvsChallenge.Business.csproj" />
+    <ProjectReference Include="..\TotvsChallenge.DataAccess\TotvsChallenge.DataAccess.csproj" />
   </ItemGroup>
 
 </Project>
