--- a/TotvsChallenge.Business/TotvsChallenge.Business.csproj
+++ b/TotvsChallenge.Business/TotvsChallenge.Business.csproj
@@ -9,4 +9,10 @@
     <ProjectReference Include="..\TotvsChallenge.Domain\TotvsChallenge.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.AspNetCore.Mvc.Formatters.Json">
+      <HintPath>..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.aspnetcore.mvc.formatters.json\2.2.0\lib\netstandard2.0\Microsoft.AspNetCore.Mvc.Formatters.Json.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
