Agrego Dapper y configuracion de monedas en appSettings

--- a/TotvsChallente/appsettings.Development.json
+++ b/TotvsChallente/appsettings.Development.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=LAPTOP-R1FQQAMU\\IDEAS;Initial Catalog=Transacciones;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
+  "MonedasOptions": {
+    "Monedas": [ 10, 20, 50, 100 ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
