--- a/TotvsChallenge.DataAccess/TotvsChallenge.DataAccess.csproj
+++ b/TotvsChallenge.DataAccess/TotvsChallenge.DataAccess.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.35" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.1" />
   </ItemGroup>
 
