--- a/TotvsChallente/appsettings.Development.json
+++ b/TotvsChallente/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=LAPTOP-R1FQQAMU\\IDEAS;Initial Catalog=Transacciones;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=Transacciones;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "MonedasOptions": {
     "Monedas": [ 10, 20, 50, 100 ]
